--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -67,6 +67,26 @@ footer {
   justify-content: space-between;
   padding-right: 50px;
 }
+.about-img {
+  max-height: 400px;
+  border-radius: 20px;
+  margin: 0 auto;
+}
+.about-hero {
+  color: white;
+  text-align: justify;
+  padding-top: 50px;
+}
+.about-hero h1 {
+  font-size: 64px;
+}
+.about-hero h6 {
+  color: #f65282;
+}
+.about-hero p {
+  font-size: 18px;
+}
+
 @media (max-width: 600px) {
   .hero {
     padding-top: 50px;
