--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -62,6 +62,24 @@ img {
 footer {
   color: #ffffff;
 }
+nav ul {
+  padding-top: 10px;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  padding: 50px;
+  line-height: 40px;
+}
+nav a {
+  text-decoration: none;
+  color: #ffffff;
+}
+nav a:hover,
+nav li.active a {
+  color: darkgray;
+  transition: all 100ms ease-in-out;
+}
 .logos {
   text-align: center;
   justify-content: space-between;
@@ -87,11 +105,14 @@ footer {
   font-size: 18px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .hero {
     padding-top: 50px;
   }
   h1 {
     font-size: 52px;
+  }
+  nav li {
+    padding: 10px;
   }
 }
